# kafka-prefect-connector

./: .gitignore  Makefile  Readme.md  docker-compose-demo-infra.yaml  docker-compose-demo-infrastructure.yaml  docker-compose.yaml
kafka-listener/: .env.template  .logging.dev.yaml  .logging.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
kafka-listener/prefect_data/: event_config.json
kafka-listener/prefect_topics_config/: kafka-prefect-config.json
kafka-listener/src/: bootstrap.py  config.py  http_client.py  loggers.py  main.py
kafka-listener/src/broker/: __init__.py  base_consumer.py  consumer.py  models.py  serve.py
kafka-listener/src/healthcheck/: router.py
kafka-listener/src/utils/: __init__.py  run_in_threadpool.py  string.py  time.py
kafka-listener/src/validator/: __init__.py  config_schema.py  validation.py
message-admin-demo/: Dockerfile  Makefile  pyproject.toml  run.py
message-admin-demo/prefect_data/: event_config.json
message-admin-demo/prefect_topics_config/: kafka-prefect-config.json
message-admin-demo/src/: app.py  config.py  validation.py
prefect-worker-demo/: .env.template  Dockerfile  Makefile  README.md  deploy.py  pyproject.toml
prefect-worker-demo/flows/: __init__.py  example_flow_1.py  example_flow_2.py
